// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkipLink Matches Snapshot (Desktop) 1`] = `
.c0 {
  color: #006296;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  overflow: hidden;
  position: absolute;
  text-transform: unset;
  white-space: nowrap;
}

.c0:not(:focus) {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  width: 1px;
}

.c0:focus {
  background-color: #FFFFFF;
  position: absolute;
}

<a
  class="c0"
  href="test"
>
  Skip to main content
</a>
`;

exports[`SkipLink Matches Snapshot (Mobile) 1`] = `
.c0 {
  color: #006296;
  font-size: 1rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  overflow: hidden;
  position: absolute;
  text-transform: unset;
  white-space: nowrap;
}

.c0:not(:focus) {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  width: 1px;
}

.c0:focus {
  background-color: #FFFFFF;
  position: absolute;
}

<a
  class="c0"
  href="test"
>
  Skip to main content
</a>
`;
